--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" href="assets/favicon.png">
     <script src="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script defer src="https://cloud.umami.is/script.js" data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
+    <script defer src="https://cloud.umami.is/script.js"
+        data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
 </head>
 
 <body>
@@ -17,40 +18,10 @@
     <div class="background-gradient"></div>
     <div class="card-container">
         <div class="card">
-            <img src="assets/smash camp new lands.png" class="image">
-            <div class="card-content">
-                <h2>Smash Camp: New Lands</h2>
-                <h4>May 31st - June 2nd</h4>
-                <div class="featured-players">
-                    <u>Featured Players</u>
-                    <ul class="featured-players-columns">
-                        <li>Magi</li>
-                        <li>Fiction</li>
-                        <li>Spark</li>
-                        <li>Logan</li>
-                        <li>Bbatts</li>
-                        <li>Aura</li>
-                        <li>Graves</li>
-                        <li>Kacey</li>
-                    </ul>
-                </div>
-                <hr>
-                <p><a href="https://maps.app.goo.gl/naFGgKkRKom8eME57" target="_blank" data-umami-event="map-link-clicked" data-umami-event-location="Gresham, OR">Gresham, OR</a> | <b>attendees:</b> 400+</p>
-                <hr>
-                <div class="buttons">
-                    <a href="https://www.start.gg/tournament/smash-camp-new-lands-2024/details" target="_blank"
-                        class="card-button" data-umami-event="start-gg-clicked" data-umami-event-name="Smash Camp">start.gg</a>
-                        <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                        class="card-button" data-umami-event="schedule-clicked" data-umami-event-name="Smash Camp">schedule</a> -->
-                    <a href="https://www.twitch.tv/Level1_TV" target="_blank" class="card-button" data-umami-event="stream-link-clicked" data-umami-event-name="Smash Camp">stream</a>
-                </div>
-            </div>
-        </div>
-        <div class="card">
             <img src="assets/tipped off 15.png" class="image">
             <div class="card-content">
                 <h2>Tipped Off 15</h2>
-                <h4>June 15 - June 16</h4>
+                <h4>Jun 15-16</h4>
                 <div class="featured-players">
                     <u>Featured Players</u>
                     <ul class="featured-players-columns">
@@ -65,14 +36,19 @@
                     </ul>
                 </div>
                 <hr>
-                <p><a href="https://maps.app.goo.gl/4xa7DWr8bYn9XH4H8" target="_blank" data-umami-event="map-link-clicked" data-umami-event-location="Marietta, GA">Marietta, GA</a> | <b>attendees:</b> 250+</p>
+                <p><a class="card-location" href="https://maps.app.goo.gl/4xa7DWr8bYn9XH4H8" target="_blank"
+                        data-umami-event="map-link-clicked" data-umami-event-location="Marietta, GA">Marietta, GA</a> |
+                    <b>Attendees:</b> 500+</p>
                 <hr>
                 <div class="buttons">
                     <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                        class="card-button" data-umami-event="start-gg-clicked" data-umami-event-name="Tipped Off">start.gg</a>
-                    <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                        class="card-button"  data-umami-event="schedule-clicked" data-umami-event-name="Tipped Off">schedule</a>
-                    <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Tipped Off">stream</a>
+                        class="card-button" data-umami-event="start-gg-clicked"
+                        data-umami-event-name="Tipped Off">Start.gg</a>
+                    <a href="assets/schedules/tipped off 15 schedule.png" target="_blank"
+                        class="card-button" data-umami-event="schedule-clicked"
+                        data-umami-event-name="Tipped Off">Schedule</a>
+                    <a href="https://twitch.tv/Mang0" target="_blank" class="card-button"
+                        data-umami-event="stream-clicked" data-umami-event-name="Tipped Off">Stream</a>
                 </div>
             </div>
         </div>
@@ -96,16 +72,54 @@
                 </div>
                 <hr>
                 <p>
-                    <a href="https://maps.app.goo.gl/K19xfyePawTfPrwi8" target="_blank"  data-umami-event="map-link-clicked" data-umami-event-location="Daytona Beach, FL">Daytona Beach, FL</a>
+                    <a class="card-location" href="https://maps.app.goo.gl/K19xfyePawTfPrwi8" target="_blank"
+                        data-umami-event="map-link-clicked" data-umami-event-location="Daytona Beach, FL">Daytona Beach,
+                        FL</a>
                     |
-                    <b>attendees:</b> TBD</p>
+                    <b>Attendees:</b> TBD
+                </p>
                 <hr>
                 <div class="buttons">
-                    <a href="https://www.start.gg/tournament/ceo-2024-6" target="_blank"
-                        class="card-button" data-umami-event="start-gg-clicked" data-umami-event-name="CEO 2024">start.gg</a>
-                    <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank"  data-umami-event="schedule-clicked" data-umami-event-name="CEO 2024"
-                        class="card-button">schedule</a>
-                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button"  data-umami-event="stream-clicked" data-umami-event-name="CEO 2024">stream</a> -->
+                    <a href="https://www.start.gg/tournament/ceo-2024-6" target="_blank" class="card-button"
+                        data-umami-event="start-gg-clicked" data-umami-event-name="CEO 2024">Start.gg</a>
+                    <a href="https://ceogaming.org/ceo/#:~:text=CEO%202024%20GENERAL%20EVENT%20SCHEDULE" target="_blank"
+                        data-umami-event="schedule-clicked" data-umami-event-name="CEO 2024"
+                        class="card-button">Schedule</a>
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button"  data-umami-event="stream-clicked" data-umami-event-name="CEO 2024">Stream</a> -->
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <img src="assets/warehouse war iv.jpg" class="image">
+            <div class="card-content">
+                <h2>Warehouse War IV</h2>
+                <h4>Jul 26-27</h4>
+                <div class="featured-players">
+                    <u>Featured Players</u>
+                    <ul class="featured-players-columns">
+                        <li>Cody Schwab</li>
+                        <li>Hungrybox</li>
+                        <li>Jmook</li>
+                        <li>Aklo</li>
+                        <li>Magi</li>
+                        <li>CPU0</li>
+                        <li>JSalt</li>
+                        <li>MOF</li>
+                    </ul>
+                </div>
+                <hr>
+                <p><a class="card-location" href="https://maps.app.goo.gl/dE8qzo318PnMXabL7" target="_blank"
+                        data-umami-event="map-link-clicked" data-umami-event-location="Nashville, TN">Nashville, TN</a>
+                    | <b>Attendees:</b> 150+</p>
+                <hr>
+                <div class="buttons">
+                    <a href="https://www.start.gg/tournament/warehouse-war-4/details" target="_blank"
+                        class="card-button" data-umami-event="start-gg-clicked"
+                        data-umami-event-name="Warhouse War IV">Start.gg</a>
+                    <a href="https://www.bing.com/th?pid=Sgg&qlt=100&u=https%3A%2F%2Fimages.start.gg%2Fimages%2FprofileWidgetPageLayout%2F2476303%2Fimage-d275965ff83672fa785f92237cd9b3fb-optimized.png&ehk=FeXrLBPKMwaCs5s%2Fgy5wx1nFHceHTu45M9hF3CHYxXg%3D&w=900&r=0"
+                        target="_blank" class="card-button" data-umami-event="schedule-clicked"
+                        data-umami-event-name="Warhouse War IV">Schedule</a>
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Warhouse War IV">Stream</a> -->
                 </div>
             </div>
         </div>
@@ -129,16 +143,18 @@
                 </div>
                 <hr>
                 <p>
-                    <a href="https://maps.app.goo.gl/rs4L8qvj1JSGWEid6" target="_blank"  data-umami-event="map-link-clicked" data-umami-event-location="Chantilly, VA">Chantilly, VA</a>
+                    <a class="card-location" href="https://maps.app.goo.gl/rs4L8qvj1JSGWEid6" target="_blank"
+                        data-umami-event="map-link-clicked" data-umami-event-location="Chantilly, VA">Chantilly, VA</a>
                     |
-                    <b>attendees:</b> TBD</p>
+                    <b>Attendees:</b> TBD
+                </p>
                 <hr>
                 <div class="buttons">
-                    <a href="https://www.start.gg/tournament/supernova-2024" target="_blank"
-                        class="card-button" data-umami-event="start-gg-clicked" data-umami-event-name="Supernova 2024">start.gg</a>
+                    <a href="https://www.start.gg/tournament/supernova-2024" target="_blank" class="card-button"
+                        data-umami-event="start-gg-clicked" data-umami-event-name="Supernova 2024">Start.gg</a>
                     <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                        class="card-button" data-umami-event="schedule-clicked" data-umami-event-name="Supernova 2024">schedule</a> -->
-                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Supernova 2024">stream</a> -->
+                        class="card-button" data-umami-event="schedule-clicked" data-umami-event-name="Supernova 2024">Schedule</a> -->
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Supernova 2024">Stream</a> -->
                 </div>
             </div>
         </div>
@@ -162,27 +178,37 @@
                 </div>
                 <hr>
                 <p>
-                    <a href="https://maps.app.goo.gl/i9iTShDJm5JkFpGH9" target="_blank" data-umami-event="map-link-clicked" data-umami-event-location="Seattle, WA">Seattle, WA</a>
+                    <a class="card-location" href="https://maps.app.goo.gl/i9iTShDJm5JkFpGH9" target="_blank"
+                        data-umami-event="map-link-clicked" data-umami-event-location="Seattle, WA">Seattle, WA</a>
                     |
-                    <b>attendees:</b> 500+</p>
+                    <b>Attendees:</b> 300+
+                </p>
                 <hr>
                 <div class="buttons">
                     <a href="https://www.start.gg/tournament/don-t-park-on-the-grass-2024" target="_blank"
-                        class="card-button" data-umami-event="start-gg-clicked" data-umami-event-name="Don't Park on the Grass">start.gg</a>
+                        class="card-button" data-umami-event="start-gg-clicked"
+                        data-umami-event-name="Don't Park on the Grass">Start.gg</a>
                     <!-- <a href="https://www.start.gg/tournament/tipped-off-15-connected-1/details" target="_blank"
-                        class="card-button" data-umami-event="schedule-clicked" data-umami-event-name="Don't Park on the Grass">schedule</a> -->
-                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Don't Park on the Grass">stream</a> -->
+                        class="card-button" data-umami-event="schedule-clicked" data-umami-event-name="Don't Park on the Grass">Schedule</a> -->
+                    <!-- <a href="https://twitch.tv/Mang0" target="_blank" class="card-button" data-umami-event="stream-clicked" data-umami-event-name="Don't Park on the Grass">Stream</a> -->
                 </div>
             </div>
         </div>
     </div>
     <footer>
         <div class="footer">
-            <p>see something wrong? open an issue or pull request on our <a href="https://github.com/jtof-dev/meleemajors.gg" data-umami-event="github-link-clicked">github repo</a></p>
-            <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank" data-umami-event="second-github-link-clicked">website</a> is
-            open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank" data-umami-event="license-link-clicked">agpl-3</a></p>
-            <p>powered by <a href="https://pages.github.com" target="_blank" data-umami-event="github-pages-clicked">github
-            pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank" data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock" target="_blank" data-umami-event="excalo-github-clicked">excalo</a></p>
+            <p>see something wrong? open an issue or pull request on our <a
+                    href="https://github.com/jtof-dev/meleemajors.gg" data-umami-event="github-link-clicked">github
+                    repo</a></p>
+            <p>this <a href="https://github.com/jtof-dev/meleemajors.gg" target="_blank"
+                    data-umami-event="second-github-link-clicked">website</a> is
+                open-source, and is licensed under <a href="https://www.gnu.org/licenses/agpl-3.0.html" target="_blank"
+                    data-umami-event="license-link-clicked">agpl-3</a></p>
+            <p>powered by <a href="https://pages.github.com" target="_blank"
+                    data-umami-event="github-pages-clicked">github
+                    pages</a> | made with love by <a href="https://github.com/jtof-dev" target="_blank"
+                    data-umami-event="jtof-github-clicked">jtof</a> and <a href="https://github.com/nathanbabcock"
+                    target="_blank" data-umami-event="excalo-github-clicked">excalo</a></p>
         </div>
     </footer>
 </body>
