feat: add currently live badge with js checker
Co-authored-by: Nathan <nathanbabcock@users.noreply.github.com>

--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
     <h2 class="subtitle">The Largest Upcoming Melee Events</h2>
     <div class="background-gradient"></div>
     <div class="card-container">
-<div class="card">
+<div class="card" data-start-time="1719583200" data-end-time="1719799200">
     <img src="assets/cards/ceo20246.webp" class="image">
     <div class="card-content">
         <h2>CEO 2024</h2>
@@ -69,7 +69,7 @@
         </div>
     </div>
 </div>
-<div class="card">
+<div class="card" data-start-time="1722038400" data-end-time="1722142740">
     <img src="assets/cards/warehouseWar4.webp" class="image">
     <div class="card-content">
         <h2>Warehouse War 4</h2>
@@ -95,7 +95,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Nashville, TN">
             Nashville, TN
-          </a> | <b>Attendees:</b> 159
+          </a> | <b>Attendees:</b> 161
         </p>
         <hr>
         <div class="buttons">
@@ -120,7 +120,7 @@
         </div>
     </div>
 </div>
-<div class="card">
+<div class="card" data-start-time="1723129200" data-end-time="1723420800">
     <img src="assets/cards/supernova2024.webp" class="image">
     <div class="card-content">
         <h2>Supernova 2024</h2>
@@ -171,7 +171,7 @@
         </div>
     </div>
 </div>
-<div class="card">
+<div class="card" data-start-time="1724961600" data-end-time="1725260340">
     <img src="assets/cards/eggdogInvitational.webp" class="image">
     <div class="card-content">
         <h2>Eggdog Invitational</h2>
@@ -222,7 +222,7 @@
         </div>
     </div>
 </div>
-<div class="card">
+<div class="card" data-start-time="1731772800" data-end-time="1731913200">
     <img src="assets/cards/donTParkOnTheGrass2024.webp" class="image">
     <div class="card-content">
         <h2>Don't Park on the Grass 2024</h2>
@@ -248,7 +248,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Seattle, WA">
             Seattle, WA
-          </a> | <b>Attendees:</b> 334
+          </a> | <b>Attendees:</b> 335
         </p>
         <hr>
         <div class="buttons">
@@ -277,7 +277,7 @@
 <footer>
     <div class="footer">
         <button onclick="calendarButton(event)" class="calendar-button" data-umami-event="calendar-button-clicked">calendar</button>
-        <button onclick="switchColors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
+        <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light mode</button>
         <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on ko-fi</button></a>
         <hr>
         <p>see something wrong? open an issue or pull request on our <a
