--- a/ssg/src/html/templateCard.html
+++ b/ssg/src/html/templateCard.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" data-start-time="{{start-unix-timestamp}}" data-end-time="{{end-unix-timestamp}}">
     <img src="assets/cards/{{start.gg-tournament-name}}.webp" class="image">
     <div class="card-content">
         <h2>{{name}}</h2>
