--- a/ssg/src/html/footer.html
+++ b/ssg/src/html/footer.html
@@ -2,7 +2,7 @@
 <footer>
     <div class="footer">
         <button onclick="calendarButton(event)" class="calendar-button" data-umami-event="calendar-button-clicked">calendar</button>
-        <button onclick="switchColors(event)" data-umami-event="theme-toggle-clicked">switch to light mode</button>
+        <button onclick="switchColors(event)" class="theme-toggle" data-umami-event="theme-toggle-clicked">switch to light mode</button>
         <a href="https://ko-fi.com/meleemajors" target="_blank" data-umami-event="ko-fi-button"><button>buy us a coffee on ko-fi</button></a>
         <hr>
         <p>see something wrong? open an issue or pull request on our <a
