feat: clean up tournaments.json and change favicon

--- a/site/index.html
+++ b/site/index.html
@@ -27,10 +27,10 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>Hungrybox</li>
-                <li>Wizzrobe</li>
-                <li>TBD</li>
-                <li>TBD</li>
                 <li>Jmook</li>
+                <li>TBD</li>
+                <li>TBD</li>
+                <li>Wizzrobe</li>
                 <li>CPU0</li>
                 <li>TBD</li>
                 <li>TBD</li>
@@ -44,7 +44,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Daytona Beach, FL">
             Daytona Beach, FL
-          </a> | <b>Attendees:</b> 157
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 157
         </p>
         <hr>
         <div class="buttons">
@@ -78,12 +78,12 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>Cody Schwab</li>
-                <li>Hungrybox</li>
                 <li>Jmook</li>
-                <li>Aklo</li>
                 <li>Magi</li>
-                <li>CPU0</li>
                 <li>JSalt</li>
+                <li>Hungrybox</li>
+                <li>Aklo</li>
+                <li>CPU0</li>
                 <li>MOF</li>
             </ul>
         </div>
@@ -95,7 +95,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Nashville, TN">
             Nashville, TN
-          </a> | <b>Attendees:</b> 161
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
         </p>
         <hr>
         <div class="buttons">
@@ -146,7 +146,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Chantilly, VA">
             Chantilly, VA
-          </a> | <b>Attendees:</b> TBD
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> TBD
         </p>
         <hr>
         <div class="buttons">
@@ -180,12 +180,12 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>Zain</li>
-                <li>Cody Schwab</li>
                 <li>Mang0</li>
-                <li>Hungrybox</li>
                 <li>aMSa</li>
-                <li>moky</li>
                 <li>Spark</li>
+                <li>Cody Schwab</li>
+                <li>Hungrybox</li>
+                <li>moky</li>
                 <li>Trif</li>
             </ul>
         </div>
@@ -197,7 +197,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Vancouver, BC">
             Vancouver, BC
-          </a> | <b>Attendees:</b> 12
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 12
         </p>
         <hr>
         <div class="buttons">
@@ -231,12 +231,12 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>Cody Schwab</li>
-                <li>Plup</li>
                 <li>Wizzrobe</li>
-                <li>Fiction</li>
                 <li>Spark</li>
-                <li>Medz</li>
                 <li>CPU0</li>
+                <li>Plup</li>
+                <li>Fiction</li>
+                <li>Medz</li>
                 <li>Salt</li>
             </ul>
         </div>
@@ -248,7 +248,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Seattle, WA">
             Seattle, WA
-          </a> | <b>Attendees:</b> 335
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 335
         </p>
         <hr>
         <div class="buttons">
