--- a/ssg/src/html/templateCard.html
+++ b/ssg/src/html/templateCard.html
@@ -7,12 +7,12 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>{{player0}}</li>
-                <li>{{player1}}</li>
                 <li>{{player2}}</li>
-                <li>{{player3}}</li>
                 <li>{{player4}}</li>
-                <li>{{player5}}</li>
                 <li>{{player6}}</li>
+                <li>{{player1}}</li>
+                <li>{{player3}}</li>
+                <li>{{player5}}</li>
                 <li>{{player7}}</li>
             </ul>
         </div>
@@ -24,7 +24,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="{{city-and-state}}">
             {{city-and-state}}
-          </a> | <b>Attendees:</b> {{entrants}}
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> {{entrants}}
         </p>
         <hr>
         <div class="buttons">
