feat: optimize site more (potentially making mobile view worse)

--- a/site/index.html
+++ b/site/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Melee Majors</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Largest Upcoming Melee Events">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/favicon/favicon.webp">
     <script src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="https://cloud.umami.is/script.js"
         data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
+    <title>Melee Majors</title>
 </head>
 
 <body class="dark-mode">
@@ -19,7 +20,7 @@
     <div class="background-gradient"></div>
     <div class="card-container">
 <div class="card" data-start-time="1719583200" data-end-time="1719799200">
-    <img src="assets/cards/ceo20246.webp" class="image">
+    <img src="assets/cards/ceo20246.webp" alt="CEO 2024 banner image" class="image">
     <div class="card-content">
         <h2>CEO 2024</h2>
         <h4>June 28 - June 30</h4>
@@ -44,7 +45,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Daytona Beach, FL">
             Daytona Beach, FL
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 157
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 158
         </p>
         <hr>
         <div class="buttons">
@@ -70,7 +71,7 @@
     </div>
 </div>
 <div class="card" data-start-time="1722038400" data-end-time="1722142740">
-    <img src="assets/cards/warehouseWar4.webp" class="image">
+    <img src="assets/cards/warehouseWar4.webp" alt="Warehouse War 4 banner image" class="image">
     <div class="card-content">
         <h2>Warehouse War 4</h2>
         <h4>July 26 - July 27</h4>
@@ -95,7 +96,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Nashville, TN">
             Nashville, TN
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 163
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 168
         </p>
         <hr>
         <div class="buttons">
@@ -121,7 +122,7 @@
     </div>
 </div>
 <div class="card" data-start-time="1723129200" data-end-time="1723420800">
-    <img src="assets/cards/supernova2024.webp" class="image">
+    <img src="assets/cards/supernova2024.webp" alt="Supernova 2024 banner image" class="image">
     <div class="card-content">
         <h2>Supernova 2024</h2>
         <h4>August 08 - August 11</h4>
@@ -172,7 +173,7 @@
     </div>
 </div>
 <div class="card" data-start-time="1724961600" data-end-time="1725260340">
-    <img src="assets/cards/eggdogInvitational.webp" class="image">
+    <img src="assets/cards/eggdogInvitational.webp" alt="Eggdog Invitational banner image" class="image">
     <div class="card-content">
         <h2>Eggdog Invitational</h2>
         <h4>August 29 - September 02</h4>
@@ -223,7 +224,7 @@
     </div>
 </div>
 <div class="card" data-start-time="1731772800" data-end-time="1731913200">
-    <img src="assets/cards/donTParkOnTheGrass2024.webp" class="image">
+    <img src="assets/cards/donTParkOnTheGrass2024.webp" alt="Don't Park on the Grass 2024 banner image" class="image">
     <div class="card-content">
         <h2>Don't Park on the Grass 2024</h2>
         <h4>November 16 - November 18</h4>
@@ -248,7 +249,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Seattle, WA">
             Seattle, WA
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 335
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 338
         </p>
         <hr>
         <div class="buttons">
