--- a/ssg/src/html/header.html
+++ b/ssg/src/html/header.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Melee Majors</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="The Largest Upcoming Melee Events">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/favicon/favicon.webp">
     <script src="script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script defer src="https://cloud.umami.is/script.js"
         data-website-id="2e6188c4-56e6-49cc-bd9e-511523dc3fb7"></script>
+    <title>Melee Majors</title>
 </head>
 
 <body class="dark-mode">
