--- a/ssg/src/html/templateCard.html
+++ b/ssg/src/html/templateCard.html
@@ -1,5 +1,5 @@
 <div class="card" data-start-time="{{start-unix-timestamp}}" data-end-time="{{end-unix-timestamp}}">
-    <img src="assets/cards/{{start.gg-tournament-name}}.webp" class="image">
+    <img src="assets/cards/{{start.gg-tournament-name}}.webp" alt="{{name}} banner image" class="image">
     <div class="card-content">
         <h2>{{name}}</h2>
         <h4>{{date}}</h4>
