feat: automatically search for top players by year ranking

--- a/site/index.html
+++ b/site/index.html
@@ -27,14 +27,14 @@
         <div class="featured-players">
             <u>Featured Players</u>
             <ul class="featured-players-columns">
-                <li>Hungrybox</li>
                 <li>Jmook</li>
-                <li>TBD</li>
-                <li>TBD</li>
                 <li>Wizzrobe</li>
+                <li>MOF</li>
+                <li>Gahtzu</li>
+                <li>Hungrybox</li>
+                <li>Panda</li>
                 <li>CPU0</li>
-                <li>TBD</li>
-                <li>TBD</li>
+                <li>Voo</li>
             </ul>
         </div>
         <hr>
@@ -79,13 +79,13 @@
             <u>Featured Players</u>
             <ul class="featured-players-columns">
                 <li>Cody Schwab</li>
-                <li>Jmook</li>
-                <li>Magi</li>
-                <li>JSalt</li>
                 <li>Hungrybox</li>
+                <li>Salt</li>
+                <li>Axe</li>
+                <li>Jmook</li>
                 <li>Aklo</li>
-                <li>CPU0</li>
-                <li>MOF</li>
+                <li>Magi</li>
+                <li>Zamu</li>
             </ul>
         </div>
         <hr>
@@ -96,7 +96,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Nashville, TN">
             Nashville, TN
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 168
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 184
         </p>
         <hr>
         <div class="buttons">
@@ -180,14 +180,14 @@
         <div class="featured-players">
             <u>Featured Players</u>
             <ul class="featured-players-columns">
-                <li>Zain</li>
-                <li>Mang0</li>
-                <li>aMSa</li>
-                <li>Spark</li>
                 <li>Cody Schwab</li>
-                <li>Hungrybox</li>
                 <li>moky</li>
-                <li>Trif</li>
+                <li>Hungrybox</li>
+                <li>Wizzrobe</li>
+                <li>Zain</li>
+                <li>aMSa</li>
+                <li>Mang0</li>
+                <li>Aklo</li>
             </ul>
         </div>
         <hr>
@@ -233,12 +233,12 @@
             <ul class="featured-players-columns">
                 <li>Cody Schwab</li>
                 <li>Wizzrobe</li>
-                <li>Spark</li>
-                <li>CPU0</li>
-                <li>Plup</li>
+                <li>Zamu</li>
                 <li>Fiction</li>
-                <li>Medz</li>
+                <li>Plup</li>
                 <li>Salt</li>
+                <li>Spark</li>
+                <li>Krudo</li>
             </ul>
         </div>
         <hr>
@@ -249,7 +249,7 @@
             data-umami-event="map-link-clicked"
             data-umami-event-location="Seattle, WA">
             Seattle, WA
-          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 338
+          </a>&nbsp;&nbsp;|&nbsp;&nbsp;<b>Attendees:</b> 344
         </p>
         <hr>
         <div class="buttons">
@@ -298,4 +298,3 @@
 </body>
 
 </html>
-<!-- cause a site rebuild -->
