feat: update footer and standardize formatting on template html files

--- a/ssg/src/html/footer.html
+++ b/ssg/src/html/footer.html
@@ -2,7 +2,8 @@
 <footer>
   <div class="footer">
     <div class="calendar-note calendar-note-hidden">
-      <p>you can import this link into your calendar app to follow the newest majors</p>
+      <p>want upcoming melee majors on your calendar? add this link as an external url on any online calender service
+      </p>
       <div class="calendar-url-snippet">
         <pre>https://meleemajors.gg/calendar.ics</pre>
         <button onclick="copyCalendar()"><img src="assets/copyButton.svg" alt="copy button"></button>
